fix: Vertical alignment
In Chrome the number (digit; eg 1) of a line was not aligned with the
prefix (eg S) when using em units. Though the em units work better in
big sizes, it’s more important to fix the default size, as it’s the only
one we use at the moment.

--- a/components/web/transportchip/transportchip.scss
+++ b/components/web/transportchip/transportchip.scss
@@ -81,7 +81,6 @@ button.dbx-transportchip {
   line-height: 1;
   margin-right: 0.25em; // = a space character
   vertical-align: (dbx-font-size('copy', 'm') - dbx-font-size('copy', 's')) / 2;
-  vertical-align: 0.05em;
 
   &:last-child {
     margin-right: 0;
